2010-12-02:
RigEditor:
	*simplified interface by removing several values ignored by game
	*added matrix input to rotations(click the "Rotation" link text for a dialog)
2010-12-01:
AnimationResources:
	*removed offset check that caused an error with clips modified by the animtool
2010-11-27:
RigEditor:
	*fixed transformation order in matrix calculation
AnimationResources:
	*refactoring of ClipResource
2010-11-21:
	Updated to latest s3pi libs
SkinTone:
	*Version 6 support
MLOD:
	*Added indexBuffer to value string	
2010-11-14:
RigEditor:
	*Simplified rotation input
	*Scale added to matrix calculations
	*Readonly hashed bone name textbox for convenience
2010-11-13:
RigEditor:
	*Formatted RSLT matrix to match the wrapper
SKIN:
	*Fixed matrix order
2010-11-11:
	Re-structured project.
	Various bugfixes.
2010-11-07:
	Updated to latest s3pi libs
2010-10-30:
New Wrappers:
	*LightResource (More descriptive than original)
ObjectGeometry:
	*Better names for unknowns
2010-10-18:
RigEditor:
	*Resizable
	*Hierarchy expanded
SKIN:
	*better defined "Transform" structure
2010-10-12:
New Helpers:
	*RigEditor(Helper): A GUI for the rig resource in its early stages.
2010-10-09:
SkinToneResource:
	*Fixed error in Value string
RigResource:
	*Refactoring
2010-10-05:
RigResource:
	*Added default values
2010-09-30:
New Wrappers:
	*AnimatedTextureResource
ObjectGeometryResource:
	*Filtered some version dependent content fields
	*Added "VbufType" to "Value" string	
EffectResource:
	*Filtered some version dependent content fields
RigResource:
	*Fixed issue with writing body rigs
2010-09-11:
EffectResource:
	*Rewrote to handle file sections
2010-09-10:
RigResource:
	*Removed platform-specific code to resolve problem in Windows7
EffectResource:
	*Updated spec(thanks to Rick's source code)
ColourInfoResource:
	*fixed typo that stopped type 0x06326213 from being handled
